Added drop down menu and countries list

--- a/flash-resume-client/src/client/assets/styles/styles.css
+++ b/flash-resume-client/src/client/assets/styles/styles.css
@@ -9,3 +9,7 @@
 .text-input {
   @apply w-[80%] py-2 px-4 rounded-md border-solid border border-slate-600 shadow-sm;
 }
+
+.form-input-container {
+  @apply flex flex-col gap-1
+}
