--- a/flash-resume-client/src/client/assets/styles/styles.css
+++ b/flash-resume-client/src/client/assets/styles/styles.css
@@ -6,8 +6,9 @@
   position: relative;
 }
 
-.text-input {
-  @apply w-[80%] py-2 px-4 rounded-md border-solid border border-slate-600 shadow-sm;
+.text-input:focus {
+  border-color: #719ECE;
+  box-shadow: 0 0 10px #719ECE;
 }
 
 .form-input-container {
