--- a/flash-resume-client/src/client/assets/styles/styles.css
+++ b/flash-resume-client/src/client/assets/styles/styles.css
@@ -15,3 +15,11 @@
 .form-input-container {
   @apply flex flex-col gap-1
 }
+
+.submit-button {
+  @apply bg-blue py-2 px-4 border-none rounded-md shadow-md text-white;
+}
+
+.dropdown-list-item {
+  @apply block px-4 py-2 text-sm cursor-pointer border-opacity-0 border-white;
+}
