--- a/flash-resume-client/src/client/assets/styles/fonts/roboto.css
+++ b/flash-resume-client/src/client/assets/styles/fonts/roboto.css
@@ -15,64 +15,64 @@ limitations under the License.
 */
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('flash-resume-client/src/client/assets/fonts/roboto/Roboto-Regular.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("../../fonts/roboto/Roboto-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('flash-resume-client/src/client/assets/fonts/roboto/Roboto-Bold.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("../../fonts/roboto/Roboto-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('flash-resume-client/src/client/assets/fonts/roboto/Roboto-Italic.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("../../fonts/roboto/Roboto-Italic.ttf") format("truetype");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('flash-resume-client/src/client/assets/fonts/roboto/Roboto-Thin.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("../../fonts/roboto/Roboto-Thin.ttf") format("truetype");
   font-weight: 100; /* Thin */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('flash-resume-client/src/client/assets/fonts/roboto/Roboto-Light.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("../../fonts/roboto/Roboto-Light.ttf") format("truetype");
   font-weight: 300; /* Light */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('flash-resume-client/src/client/assets/fonts/roboto/Roboto-Regular.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("../../fonts/roboto/Roboto-Regular.ttf") format("truetype");
   font-weight: 400; /* Regular */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('flash-resume-client/src/client/assets/fonts/roboto/Roboto-Medium.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("../../fonts/roboto/Roboto-Medium.ttf") format("truetype");
   font-weight: 500; /* Medium */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('flash-resume-client/src/client/assets/fonts/roboto/Roboto-Bold.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("../../fonts/roboto/Roboto-Bold.ttf") format("truetype");
   font-weight: 700; /* Bold */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('flash-resume-client/src/client/assets/fonts/roboto/Roboto-Black.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("../../fonts/roboto/Roboto-Black.ttf") format("truetype");
   font-weight: 900; /* Black */
   font-style: normal;
 }
