--- a/flash-resume-client/src/client/assets/styles/styles.css
+++ b/flash-resume-client/src/client/assets/styles/styles.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("./fonts/nunito.css");
+@import url("./fonts/roboto.css");
+
 .root {
   position: relative;
 }
