--- a/flash-resume-client/src/client/assets/styles/styles.css
+++ b/flash-resume-client/src/client/assets/styles/styles.css
@@ -4,6 +4,7 @@
 
 @import url("./fonts/nunito.css");
 @import url("./fonts/roboto.css");
+@import url("./layout/heading.css");
 
 .root {
   position: relative;
