--- a/flash-resume-client/src/client/assets/styles/styles.css
+++ b/flash-resume-client/src/client/assets/styles/styles.css
@@ -2,9 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1 {
+    @apply text-4xl;
+  }
+  h2 {
+    @apply text-3xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  h4 {
+    @apply text-xl;
+  }
+  h5 {
+    @apply text-lg;
+  }
+}
+
 @import url("./fonts/nunito.css");
 @import url("./fonts/roboto.css");
-@import url("./layout/heading.css");
 
 .root {
   position: relative;
